lib/lang/src/compile/type_inference/snapshots/lang__compile__type_inference__tests__infer_types_of_let_with_function_definition.snap
---
source: lib/lang/src/compile/type_inference/mod.rs
expression: infer_types(&module)

---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: Let(
                        Let {
                            definitions: [
                                FunctionDefinition(
                                    FunctionDefinition {
                                        name: "f",
                                        arguments: [
                                            "z",
                                        ],
                                        body: Variable(
                                            Variable {
                                                name: "z",
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        type_: Function(
                                            Function {
                                                argument: Number(
                                                    Number {
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                                result: Number(
                                                    Number {
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        source_information: SourceInformation {
                                            source_name: "",
                                            location: Location {
                                                line_number: 0,
                                                column_number: 0,
                                            },
                                            line: "",
                                        },
                                    },
                                ),
                            ],
                            expression: Application(
                                Application {
                                    type_: Function(
                                        Function {
                                            argument: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            result: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    function: Variable(
                                        Variable {
                                            name: "f",
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    argument: Number(
                                        Number {
                                            value: 42.0,
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Number(
                        Number {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        export_foreign: ExportForeign {
            names: {},
        },
        imports: [],
        import_foreigns: [],
    },
)
